spinner 100% to complate

--- a/src/componnents/ui/spinner.css
+++ b/src/componnents/ui/spinner.css
@@ -1,5 +1,11 @@
 .spinner{
-   display: flex;
+   /* display: flex;
    align-items: center;
    left: 50px;
+   /* background-color: blueviolet; */
+   /* margin-left: 150px; */
+   /* justify-content: center; */ 
+   display: grid;
+   place-items: center;
+    
 }
